Update workspace URL in index.html

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ body{
 <script>
 /* Links dos apps — troque pelos seus URLs (páginas dos programas) */
 window.APP_LINKS = {
-  workspace:   'https://SEU-DOMINIO/Workspace.html',
+  workspace:   'https://hdspcorp.github.io/Workspace10/',
   conversor:   'https://SEU-DOMINIO/Conversor.html',
   transmissor: 'https://SEU-DOMINIO/Transmissor.html'
   // dica: se você adicionar suporte, pode usar '?embed=1' nesses URLs
